<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/looi_bg">

    <ImageView
        android:id="@+id/robotView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/ic_robot_face"
        android:contentDescription="@string/cd_robot_face"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tagline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVerticalChainStyle="packed"
        app:layout_constraintVerticalBias="0.45" />

    <TextView
        android:id="@+id/appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/looi_text"
        android:textSize="36sp"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/robotView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tagline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/splash_tagline"
        android:textColor="@color/looi_text_dim"
        android:textSize="14sp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/appName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
